--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 streamlit>=1.28.0
-pymupdf>=1.23.0  # вместо fitz
+pymupdf>=1.23.0
 pandas>=2.0.0
 openpyxl>=3.1.0
+pillow>=10.0.0
+python-docx>=1.1.0
+numpy>=1.24.0
