--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.28.0
-pymupdf>=1.23.0
+streamlit>=1.30.0
+PyMuPDF>=1.23.0
 pandas>=2.0.0
 openpyxl>=3.1.0
-pillow>=10.0.0
-python-docx>=1.1.0
+python-docx>=0.8.11
+Pillow>=9.0.0
 numpy>=1.24.0
